style fixes on small viewports

--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -4,6 +4,7 @@
 	width: 100vw;
 	display: flex;
 	justify-content: center;
+	margin: 0px -30px;
 }
 
 .side-line {
@@ -51,19 +52,16 @@
 }
 
 .container {
-	padding-left: 30px;
-	padding-right: 30px;
-
-	& > .heading-box {
+	& > div {
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
-		width: calc(100% - 60px);
+		margin-left: 30px;
+		margin-right: 30px;
 		max-width: 900px;
 
 		@media #{$desktop-info} {
 			margin: 30px 150px;
-			width: calc(100% - 300px);
 		}
 	}
 
@@ -71,6 +69,10 @@
 		padding-left: 0px;
 		padding-right: 0px;
 	}
+}
+
+.heading-box {
+	width: 100%;
 }
 
 .heading {
